--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "marked": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2",
-    "simple-markdown": "^0.7.2"
+    "react-scripts": "3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "mv build docs"
   },
   "eslintConfig": {
     "extends": "react-app"
